<resources>
    <string name="app_name">Haushaltsmanager</string>
    <string name="hello">hello</string>
    <string name="verbindung">verbindung</string>
    <string name="lesenBtnText">Lesen</string>
    <string name="tv_haushaltbeitreten1_text">Trete einem bestehenden</string>
    <string name="tv_haushaltbeitreten2_text">Haushalt bei</string>
    <string name="haushaltsid">Haushalts-ID</string>
    <string name="passwort">Passwort</string>
    <string name="haushaltbeitreten">Beitreten</string>
    <string name="abbruch">Abbruch</string>
    <string name="hilfe">Hilfe</string>
    <string name="login">Login</string>
    <string name="benutzername">Benutzername</string>
    <string name="neueskonto">Neues Konto erstellen</string>
    <string name="kontoerstellen1">Erstelle dir ein</string>
    <string name="kontoerstellen2">Benutzerkonto!</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="neuenhaushalterstellen">Neuen Haushalt erstellen</string>
    <string name="exishaushaltbeitreten">Existierendem Haushalt beitreten</string>
    <string name="erstellehaushalt">Erstelle einen neuen</string>
    <string name="haushalt">Haushalt</string>
    <string name="namehaushalt">Name des Haushaltes</string>
    <string name="anschriftoptional">Anschrift (optional)</string>
    <string name="beschreibungoptional">Beschreibung (optional)</string>
    <string name="einkaufsliste">Einkaufsliste</string>
    <string name="rezepte">Rezepte</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="hallo">Hallo</string>
    <string name="benutzer">Benutzer</string>
    <string name="aktuellerhaushalt">Aktueller Haushalt</string>
    <string name="neuerartikel">Füge einen neuen Artikel hinzu</string>
    <string name="artikelname">Artikelname</string>
    <string name="artikelhinzufuegenbutton">Artikel hinzufügen</string>
    <string name="menge">Menge</string>
    <string name="kaufhaeufigkeit">Kaufhäufigkeit (optional)</string>
    <string name="neuesrezept">Neues Rezept hinzufügen</string>
    <string name="textneuesrezept">Erstelle ein</string>
    <string name="textneuesrezept2">neues Rezept!</string>
    <string name="rezeptname">Rezeptname</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="fuegeeinezutathinzu">Füge eine Zutat hinzu</string>
    <string name="zutat">Zutat</string>
    <string name="zutathinzufuegen">Zutat hinzufügen</string>
    <string name="gibdeinemrezepteinennamen">Benenne dein Rezept</string>
    <string name="weiter">Weiter</string>
    <string name="berabeiterezept1">Bearbeite dein</string>
    <string name="rezept">Rezept</string>
    <string name="rezepthinzufuegen">Rezept hinzufügen</string>
    <string name="haushaltwechseln">Haushalt wechseln</string>
    <string name="ausloggen">Ausloggen</string>
    <string name="haushaltsbestand">Haushaltsbestand</string>
    <string name="haushaltsmitglied">Du bist Mitglied folgender Haushalte:</string>
    <string name="löschen">Nutzer oder Haushalt löschen</string>
    <string name="wasloeschen">Wähle aus, welche Art von Konto du löschen möchtest</string>
    <string name="haushaltloeschen">Möchtest du folgenden Haushalt wirklich löschen?</string>
    <string name="ja">Ja, Konto löschen</string>
    <string name="nein">Nein, nicht löschen</string>
    <string name="benutzerloeschen">Möchtest du wirklich dein Benutzerkonto löschen?</string>
    <string name="haushaltinfo">Haushaltsinformationen</string>
    <string name="verlassen">Haushalt verlassen</string>
    <string name="mitglieder">Folgende Nutzer sind Mitglied in diesem Haushalt:</string>
    <string name="haushaltverlassen">Möchtest du folgenden haushalt wirklich verlassen?</string>
    <string name="haushaltverlassenanweisung">Wenn du der letzte Nutzer dieses Haushalts bist, wird er geloescht.</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="verlasse">Haushalt verlassen</string>
    <string name="personenanzahl">Für wie viele Personen ist dein Rezept?</string>
    <string name="masseinheit">Maßeinheit</string>
    <string name="verfallsdatum">Verfallsdatum</string>
    <string name="bearbeite">Bearbeite</string>
    <string name="personen">Personenanzahl:</string>
</resources>
