<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_artikelhinzufuegen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/neuerartikel"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_artikelname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/artikelname"
        android:inputType="text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_menge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/menge"
        android:inputType="text|number"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_masseinheitliste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/masseinheit"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_kaufhaeufigkeit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/kaufhaeufigkeit"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_weiter_artikel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/artikelhinzufuegenbutton" />

</LinearLayout>