<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_verfallsdatum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/verfallsdatum"
        android:inputType="text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_mengebestand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/menge"
        android:inputType="number"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_kaufhaeufigkeitbestand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/kaufhaeufigkeit"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_weiter_bestand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bearbeite" />

</LinearLayout>