<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView42"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/haushaltverlassen"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_haushaltsnameverlassen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/haushaltverlassenanweisung"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_bestaetigenverlassen"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/verlasse" />

        <Button
            android:id="@+id/btn_abbruchverlassen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/abbrechen" />
    </LinearLayout>
</LinearLayout>