<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HaushaltBeitretenActivity">

    <Button
        android:id="@+id/btn_hilfe"
        android:layout_width="72dp"
        android:layout_height="33dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="159dp"
        android:text="@string/hilfe"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_abbruch" />

    <TextView
        android:id="@+id/tv_haushaltbeitreten1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="162dp"
        android:text="@string/tv_haushaltbeitreten1_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_haushaltbeitreten2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="142dp"
        android:text="@string/tv_haushaltbeitreten2_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_haushaltbeitreten1" />

    <EditText
        android:id="@+id/et_haushaltsid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="85dp"
        android:ems="10"
        android:hint="@string/haushaltsid"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_haushaltbeitreten2" />

    <EditText
        android:id="@+id/et_passwortlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="85dp"
        android:ems="10"
        android:hint="@string/passwort"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_haushaltsid" />

    <Button
        android:id="@+id/btn_beitreten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="147dp"
        android:text="@string/haushaltbeitreten"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_passwortlogin" />

    <Button
        android:id="@+id/btn_abbruch"
        android:layout_width="73dp"
        android:layout_height="35dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="159dp"
        android:text="@string/abbruch"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_beitreten" />

    <Button
        android:id="@+id/btn_neuenhaushalt"
        android:layout_width="198dp"
        android:layout_height="36dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="161dp"
        android:text="@string/neuenhaushalterstellen"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_beitreten" />

</android.support.constraint.ConstraintLayout>