<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HaushaltErstellenActivity">

    <TextView
        android:id="@+id/tv_jaushalterstellen1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="99dp"
        android:text="@string/erstellehaushalt"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_haushalterstellen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="158dp"
        android:text="@string/haushalt"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_jaushalterstellen1" />

    <EditText
        android:id="@+id/et_haushalterstellenname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="98dp"
        android:ems="10"
        android:hint="@string/namehaushalt"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_haushalterstellen2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="98dp"
        android:ems="10"
        android:hint="@string/beschreibungoptional"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_haushalterstellenname" />

    <EditText
        android:id="@+id/et_haushalterstellenpasswort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="98dp"
        android:ems="10"
        android:hint="@string/passwort"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/btn_haushalterstellen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="159dp"
        android:text="@string/neuenhaushalterstellen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_haushalterstellenpasswort" />

    <Button
        android:id="@+id/btn_haushalbeitreten"
        android:layout_width="248dp"
        android:layout_height="34dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="81dp"
        android:text="@string/exishaushaltbeitreten"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_haushalterstellen" />

</android.support.constraint.ConstraintLayout>