<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RezeptErstellenActivity">

    <TextView
        android:id="@+id/tv_rezept1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="117dp"
        android:text="@string/textneuesrezept"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_rezept2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="111dp"
        android:text="@string/textneuesrezept2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rezept1" />

    <EditText
        android:id="@+id/et_benutzernameerstellen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:hint="@string/rezeptname"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rezept2" />

    <EditText
        android:id="@+id/et_maileingeben"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="324dp" />

    <EditText
        android:id="@+id/et_passworterstellen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:hint="@string/passwort"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_maileingeben" />

    <Button
        android:id="@+id/btn_rezepterstellen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="147dp"
        android:text="@string/neuesrezept"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_passworterstellen" />

    <EditText
        android:id="@+id/et_nameerstellen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/beschreibung"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/et_maileingeben"
        app:layout_constraintTop_toBottomOf="@+id/et_benutzernameerstellen"
        tools:layout_editor_absoluteX="99dp" />

</android.support.constraint.ConstraintLayout>