<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HauptmenueActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintGuide_begin="114dp" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="395dp"
        android:layout_height="448dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_einkaufsliste"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:text="@string/einkaufsliste"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_rezepte"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:text="@string/rezepte"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_einstellungen"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:text="@string/einstellungen"
            android:textAllCaps="false"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_benutzernamehauptmenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:text="@string/benutzername"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <TextView
        android:id="@+id/tv_haushalthauptmenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:text="@string/haushalt"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hallohauptmenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="63dp"
        android:text="@string/benutzer"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_aktuellerhaushalthauptmenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:text="@string/aktuellerhaushalt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_hallohauptmenue"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>